<resources>
    <string name="app_name">Legato</string>
    <string name="app_slogan">"Stay Connected Like Legato"</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="splash_screen_text">Legato</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="contextDescriptionLoginButton">Transition to home page from login page</string>
    <string name="new_here">New here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Spotify_Conncted">Spotify Is Connected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
